# boxes

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  404.html  CMakeLists.txt  CNAME  Gemfile  Makefile  README  README-cmake-conan.md  README.Win32.md  README.Win32.txt  README.md  _config.yml  about.html  appveyor.yml  bashtest.sh  box-designs.txt  boxes-1.0.1.lsm  boxes-1.1.1.lsm  boxes-1.1.2.lsm  boxes-1.1.3.lsm  boxes-1.1.lsm  boxes-1.2.lsm  boxes-config  boxes-pkg.openwrt  boxes.portable.nuspec  boxes.shtml  boxes.spec  boxes.vim  build.html  conanfile.txt  contributing.html  cyclonedx-sbom.json  download.html  examples.html  examples.shtml  index.html  (+6 more)
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
_data/: designs-tag-descriptions.yml  designs-v1_0.yml  designs-v1_1_2.yml  designs-v1_2.yml  designs-v1_3.yml  designs-v2_0_0.yml  designs-v2_1_0.yml  designs-v2_1_1.yml  designs-v2_2_0.yml  designs-v2_2_1.yml  designs-v2_3_1.yml  navigation.yml
_includes/: about.md  analytics.html  contributing.md  footer.html  head.html  header.html  heading.html  links-list.html  navbar.html  paginator.html  shortdescription.html  sidebar.html  version-select.html
_layouts/: default.html  designlist.html  markdown.html  plaintext.html  post.html  redirect.html
_posts/: 1999-05-03-dev-update.md  1999-06-02-list-of-box-designs.md  1999-06-04-alpha1.md  1999-06-16-alpha2.md  1999-06-30-beta2.md  1999-07-04-web-page-redesign.md  1999-08-18-development-progresses.md  1999-08-19-beta-version-5-released.md  1999-08-22-boxes-v1.0-released.md  1999-08-31-new-binaries-available.md  1999-11-03-emacs-integration.md  2000-03-09-win32-port-available.md  2000-03-18-boxes-v1.0.1-released.md  2000-12-01-rhl7-compilation.md  2000-12-18-updated-emacs-mode.md  2002-02-05-new-home-boxes-thomasjensen-com.md  2003-11-20-linux-user-magazine-reports-on-boxes.md  2003-12-09-linux-magazine-reports-on-boxes.md  2006-02-26-new-options-and-designs.md  2006-06-16-linux-com-reports-on-boxes.md  2006-07-12-snapshot-with-flex-patches.md  2006-07-23-boxes-v1.1-released.md  2009-12-14-boxes-boundless-entertainment.md  2012-06-11-boxes-video-by-nixcraft.md  2012-10-19-boxes-v1.1.1-released.md  2014-04-16-windows-port-of-v1.1.1-available.md  2014-09-24-boxes-moved-to-github.md  2014-12-23-website-moved-to-github.md  2015-01-16-boxes-v1.1.2-released.md  2016-02-03-jetbrains-support-boxes.md  2016-08-02-boxes-part-of-windows10.md  2017-03-16-boxes-v1.2-released.md  2017-08-23-geek-must-have-boxes.md  2017-10-26-boxes-github-100stars.md  2018-09-10-notepadplusplus-integration.md  2019-02-21-boxes-v1.3-released.md  2019-04-05-chocolatey-package-for-windows.md  2020-01-15-modern-command-line-tools.md  2021-02-15-boxes-v2.0.0-released.md  2021-04-18-boxes-v2.1.0-released.md  (+10 more)
_sass/: _boxes.scss  _overrides.scss
blog/: index.html
css/: boxes.css  boxes.scss  theme.css
datagen/: README.md  pyproject.toml  requirements.txt  setup.cfg
datagen/datagen/: __init__.py  main.py
doc/: boxes.1.in  boxes.el  create_changelog.pl  makehtmlman
docs/: boxes-man-1.html  boxes.el  config-complete_exp.html  config-complete_exp.shtml  config-general.html  config-general.shtml  config-step.html  config-step.shtml  config-syntax.html  config-syntax.shtml  faq.html  faq.shtml  filters.html  filters.shtml  index.html  index.shtml  install.html  install.shtml  legal.html  legal.shtml  releases.html
pages/: box-designs.html  box-designs.txt  boxes-man-1.html  build.md  config-best-practices.md  config-complete_exp.md  config-general.md  config-step.md  config-syntax.md  contributing.md  download.md  editors-emacs.md  editors-geany.md  editors-jed.md  editors-notepadplusplus.md  editors-sublime.md  editors-vim.md  editors-vscode.md  editors.md  examples.md  faq.md  filters.md  releases.md  team.md  testing.md  website-attribution.md
src/: Makefile  Makefile.Win32  boxes.c  boxes.h.in  boxes.in.h  bxstring.c  bxstring.h  cmdline.c  cmdline.h  config.h  detect.c  detect.h  discovery.c  discovery.h  generate.c  generate.h  input.c  input.h  lexer.h  lexer.l  list.c  list.h  logging.c  logging.h  parsecode.c  parsecode.h  parser.y  parsing.c  parsing.h  query.c  query.h  regulex.c  regulex.h  remove.c  remove.h  remove.old.c  shape.c  shape.h  tools.c  tools.h  (+2 more)
test/: 001_trivial.txt  002_trivial_10x5.txt  003_no_config_file.txt  004_missing_option_argument.expected.tmp  004_missing_option_argument.txt  005_alignment_single_line_hlvt.txt  006_alignment_single_line_hlvc.txt  007_alignment_single_line_hlvb.txt  008_alignment_single_line_hcvt.txt  009_alignment_single_line_hcvc.txt  010_alignment_single_line_hcvb.txt  011_alignment_single_line_hrvt.txt  012_alignment_single_line_hrvc.txt  013_alignment_single_line_hrvb.txt  014_alignment_single_line_l.txt  015_alignment_single_line_c.txt  016_alignment_single_line_r.txt  017_alignment_multiline_hlvtjl.txt  018_alignment_multiline_hlvtjc.txt  019_alignment_multiline_hlvtjr.txt  020_alignment_multiline_hlvcjl.txt  021_alignment_multiline_hlvcjc.txt  022_alignment_multiline_hlvcjr.txt  023_alignment_multiline_hlvbjl.txt  024_alignment_multiline_hlvbjc.txt  025_alignment_multiline_hlvbjr.txt  026_alignment_multiline_hcvtjl.txt  027_alignment_multiline_hcvtjc.txt  028_alignment_multiline_hcvtjr.txt  029_alignment_multiline_hcvcjl.txt  030_alignment_multiline_hcvcjc.txt  031_alignment_multiline_hcvcjr.txt  032_alignment_multiline_hcvbjl.txt  033_alignment_multiline_hcvbjc.txt  034_alignment_multiline_hcvbjr.txt  035_alignment_multiline_hrvtjl.txt  036_alignment_multiline_hrvtjc.txt  037_alignment_multiline_hrvtjr.txt  038_alignment_multiline_hrvcjl.txt  039_alignment_multiline_hrvcjc.txt  (+188 more)
tools/: VERIFICATION.txt
utest/: CMakeLists.txt  Makefile  bxstring_test.c  bxstring_test.h  cmdline_test.c  cmdline_test.h  dummy_in.txt  global_mock.c  global_mock.h  logging_test.c  logging_test.h  main.c  regulex_test.c  regulex_test.h  remove_test.c  remove_test.h  report.sh  tools_test.c  tools_test.h  unicode_test.c  unicode_test.h  utest_tools.c  utest_tools.h
(+294 files in other folders)
