[metadata]
name = datagen
description = "Convert boxes config to Jekyll data file for the website's design explorer"
version = 0.1.0
license = GPL-3.0-only
author = Thomas Jensen
author_email = boxes@thomasjensen.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = datagen
include_package_data = true
install_requires =
    Click ==8.1.3
    PyYAML==6.0
zip_safe = true

[options.entry_points]
console_scripts =
    convert = datagen.main:main
